# purple-libnotify-plus

./: .gitignore  AUTHORS  CNAME  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  configure.ac  index.html  meson.build  pidgin-libnotify+.sym
po/: LINGUAS  POTFILES.in  de.po  fr.po  pidgin-libnotify+.pot  zh_CN.po
src/: Makefile  Makefile.am  Makefile.in  libnotify-compat.h  pidgin-libnotify+-common.h  pidgin-libnotify+-frames.c  pidgin-libnotify+-frames.h  pidgin-libnotify+-utils.c  pidgin-libnotify+-utils.h  pidgin-libnotify+.c  pidgin-libnotify+.h  pidgin-libnotify+.la  pidgin-libnotify+.lo  purple-libnotify+-common.h  purple-libnotify+-frames.c  purple-libnotify+-frames.h  purple-libnotify+-utils.c  purple-libnotify+-utils.h  purple-libnotify+.c  purple-libnotify+.h
src/.deps/: pidgin-libnotify+.Plo
src/.libs/: pidgin-libnotify+.la  pidgin-libnotify+.lai
